{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 355,
  "lineage": "b6d50e5d-d115-f426-e6be-9aff018945d9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-all-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-04-21T21:56:06.799-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-elasticsearch-docker/global/firewalls/allow-all-internal",
            "log_config": [],
            "name": "allow-all-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "priority": 1000,
            "project": "terraform-elasticsearch-docker",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/firewalls/allow-all-internal",
            "source_ranges": [
              "10.128.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elastic-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "9200",
                  "443",
                  "9300",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-21T21:56:06.748-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-elasticsearch-docker/global/firewalls/allow-internal-lb",
            "log_config": [],
            "name": "allow-internal-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "priority": 1000,
            "project": "terraform-elasticsearch-docker",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/firewalls/allow-internal-lb",
            "source_ranges": [
              "10.128.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "total-news-elasticsearch"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elastic-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-21T21:56:06.808-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-elasticsearch-docker/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "priority": 1000,
            "project": "terraform-elasticsearch-docker",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.elastic-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "elastic-internal-lb-i-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/backendServices/elastic-internal-lb-i",
            "creation_timestamp": "2021-04-21T21:57:07.260-07:00",
            "id": "projects/terraform-elasticsearch-docker/regions/us-central1/forwardingRules/elastic-internal-lb-i-forwarding-rule",
            "ip_address": "10.128.0.33",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "INTERNAL",
            "name": "elastic-internal-lb-i-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "network_tier": "PREMIUM",
            "ports": [
              "3000",
              "443",
              "80",
              "9200",
              "9300"
            ],
            "project": "terraform-elasticsearch-docker",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/forwardingRules/elastic-internal-lb-i-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet"
          },
          "dependencies": [
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance.elastic-instance-1",
            "google_compute_instance.elastic-instance-2",
            "google_compute_instance.elastic-instance-3",
            "google_compute_instance_group.us-elastic-ig-zone-a",
            "google_compute_instance_group.us-elastic-ig-zone-b",
            "google_compute_network.elastic-network",
            "google_compute_region_backend_service.elastic-internal-lb-i",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "elastic-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-89-16108-403-15",
                    "size": 130,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-a/disks/elastic-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-elasticsearch-docker/zones/us-central1-a/instances/elastic-instance-1",
            "instance_id": "746977953646952210",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "LFshgoNJud0=",
            "metadata_startup_script": "git clone https://github.com/CUBigDataClass/news_analysis.git\n\ncd news_analysis\n\ndocker run docker/compose:1.29.1 up\n\necho alias docker-compose=\"'\"'docker run --rm \\\n    -v /var/run/docker.sock:/var/run/docker.sock \\\n    -v \"$PWD:$PWD\" \\\n    -w=\"$PWD\" \\\n    docker/compose:1.29.1'\"'\" \u003e\u003e ~/.bashrc\n\nsource ~/.bashrc\n\ndocker-compose build\n\ndocker-compose up",
            "name": "elastic-instance-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet",
                "subnetwork_project": "terraform-elasticsearch-docker"
              }
            ],
            "project": "terraform-elasticsearch-docker",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-a/instances/elastic-instance-1",
            "service_account": [
              {
                "email": "679590280188-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/trace.append",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "total-news-elasticsearch"
            ],
            "tags_fingerprint": "5E4QuS2juWw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.elastic-network",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "elastic-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-89-16108-403-15",
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-a/disks/elastic-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-elasticsearch-docker/zones/us-central1-a/instances/elastic-instance-2",
            "instance_id": "7328481122439708434",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "mOcUiFEF5n0=",
            "name": "elastic-instance-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
                "network_ip": "10.128.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet",
                "subnetwork_project": "terraform-elasticsearch-docker"
              }
            ],
            "project": "terraform-elasticsearch-docker",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-a/instances/elastic-instance-2",
            "service_account": [
              {
                "email": "679590280188-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/trace.append",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "total-news-elasticsearch"
            ],
            "tags_fingerprint": "5E4QuS2juWw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.elastic-network",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "elastic-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-89-16108-403-15",
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-b/disks/elastic-instance-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-elasticsearch-docker/zones/us-central1-b/instances/elastic-instance-3",
            "instance_id": "4744135803640004370",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "mOcUiFEF5n0=",
            "name": "elastic-instance-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet",
                "subnetwork_project": "terraform-elasticsearch-docker"
              }
            ],
            "project": "terraform-elasticsearch-docker",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-b/instances/elastic-instance-3",
            "service_account": [
              {
                "email": "679590280188-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/trace.append",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "total-news-elasticsearch"
            ],
            "tags_fingerprint": "5E4QuS2juWw=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.elastic-network",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "elastic-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "mtu": 0,
            "name": "terraform-elasticsearch-docker-elastic-vpc",
            "project": "terraform-elasticsearch-docker",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "elastic-internal-lb-i",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-a/instanceGroups/us-elastic-ig-zone-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/zones/us-central1-b/instanceGroups/us-elastic-ig-zone-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-04-21T21:56:55.563-07:00",
            "enable_cdn": false,
            "fingerprint": "xAQ54AjgKVQ=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/healthChecks/tcp-health-check"
            ],
            "id": "projects/terraform-elasticsearch-docker/regions/us-central1/backendServices/elastic-internal-lb-i",
            "load_balancing_scheme": "INTERNAL",
            "name": "elastic-internal-lb-i",
            "project": "terraform-elasticsearch-docker",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/backendServices/elastic-internal-lb-i",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.tcp-health-check",
            "google_compute_instance.elastic-instance-1",
            "google_compute_instance.elastic-instance-2",
            "google_compute_instance.elastic-instance-3",
            "google_compute_instance_group.us-elastic-ig-zone-a",
            "google_compute_instance_group.us-elastic-ig-zone-b",
            "google_compute_network.elastic-network",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "elastic-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-04-21T21:56:06.958-07:00",
            "id": "projects/terraform-elasticsearch-docker/regions/us-central1/routers/elastic-router",
            "name": "elastic-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "project": "terraform-elasticsearch-docker",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/routers/elastic-router"
          },
          "dependencies": [
            "google_compute_network.elastic-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "elastic-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-elasticsearch-docker/us-central1/elastic-router/elastic-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "elastic-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-elasticsearch-docker",
            "region": "us-central1",
            "router": "elastic-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "elastic-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.elastic-network",
            "google_compute_router.elastic-router",
            "google_compute_subnetwork.elastic-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "elastic-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-21T21:56:07.221-07:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet",
            "ip_cidr_range": "10.128.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "elastic-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/global/networks/terraform-elasticsearch-docker-elastic-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-elasticsearch-docker",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-elasticsearch-docker/regions/us-central1/subnetworks/elastic-subnet"
          },
          "dependencies": [
            "google_compute_network.elastic-network"
          ]
        }
      ]
    }
  ]
}